--- a/src/pages/Group/components/GroupList/GroupList.module.scss
+++ b/src/pages/Group/components/GroupList/GroupList.module.scss
@@ -25,6 +25,7 @@ h2 {
 
 .groupCard {
   position: relative; 
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
   background-color: var(--background-second);
   padding: 1.5rem;
   border-radius: 0.8rem;
@@ -125,4 +126,9 @@ h2 {
 .content {
   flex: 1;
   padding-left: 20px;
+}
+
+.groupLink {
+  text-decoration: none; 
+  width: 100%;
 }
